--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,6 +40,38 @@ body{
     box-shadow: 0 1px 2px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   }
 
+  /* card */
+
+.cardinfo img{
+    width: 3rem;
+    border-radius:50%;
+    position: relative;
+    height:auto;
+    border: 1px solid #E0E0E0;
+}
+.cardinfo p{
+   margin-top: 2px;
+}
+
+.cardcomment img {
+    width: 2.5rem;
+    border-radius:50%;
+    position: relative;
+    height:auto;
+    border: 1px solid #E0E0E0;
+}
+
+.commentbody b{
+    padding-top: 10px;
+}
+
+.btn-white{
+    background-color: white;
+}
+
+.btn-white:hover{
+    background-color: #F2F2F2;
+}
   /* button */
   .ripple {
     position: relative;
