--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,6 +70,14 @@ body{
 .btn-white:hover{
     background-color: #F2F2F2;
 }
+
+.cardreply img{
+    width: 2rem;
+    border-radius:50%;
+    position: relative;
+    height:auto;
+    border: 1px solid #E0E0E0;
+}
   /* button */
   .ripple {
     position: relative;
